feat: updated spec
